[gd_scene load_steps=7 format=3 uid="uid://bs872vss6w0mq"]

[ext_resource type="Script" path="res://Resources/Level Select Script.gd" id="1_bxerm"]
[ext_resource type="Texture2D" uid="uid://c72hmubie0g6j" path="res://Resources/Main menue.png" id="2_af63h"]
[ext_resource type="Texture2D" uid="uid://ddvry1dxl7q8o" path="res://Resources/Level Select.png" id="3_v5uyq"]
[ext_resource type="Texture2D" uid="uid://bbn4yffr22qi3" path="res://Resources/Level 1.png" id="4_48bgt"]
[ext_resource type="Texture2D" uid="uid://dn0p2jysxj1jp" path="res://Resources/Level 2.png" id="5_kye3d"]
[ext_resource type="Texture2D" uid="uid://vkxaxhg6gnhf" path="res://Resources/Level 3.png" id="6_cevs6"]

[node name="Track Selector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bxerm")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_af63h")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 823.0
offset_top = 41.0
offset_right = -532.0
offset_bottom = -893.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_v5uyq")
expand_mode = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1116.0
offset_top = 344.0
offset_right = -580.0
offset_bottom = -645.0
grow_horizontal = 2
grow_vertical = 2
text = " |\\    |     |----     \\     /     _____
|  \\  |     |----       X            |
|    \\|     |----     /     \\        |
                                           |"
icon_alignment = 1
expand_icon = true

[node name="Level1Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 865.0
offset_top = 344.0
offset_right = -831.0
offset_bottom = -645.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("4_48bgt")
icon_alignment = 1
expand_icon = true

[node name="Level2Button" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 865.0
offset_top = 344.0
offset_right = -831.0
offset_bottom = -645.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("5_kye3d")
icon_alignment = 1
expand_icon = true

[node name="Level3Button" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 865.0
offset_top = 344.0
offset_right = -831.0
offset_bottom = -645.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("6_cevs6")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="Level3Button" to="." method="_on_level_3_button_pressed"]
